ICFProviderTool - use ProcessBuilder instead of Runtime.exec()